--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 <body>
     <div class="top-bar">
         <div class="container">
+            <div class="social-links">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-weibo"></i></a>
+                <a href="#"><i class="fab fa-weixin"></i></a>
+            </div>
             <div class="language-switcher-desktop">
                 <a href="#" id="lang-zh">中文</a> |
                 <a href="#" id="lang-en">EN</a> |
