Revert "fix translation eror"
This reverts commit a28c901e072653235a8db917e625db347c6fc2ea.

--- a/index.html
+++ b/index.html
@@ -131,37 +131,37 @@
                 <li class="dropdown">
                     <a href="#" data-translate="nav.about">Tentang Kami</a>
                     <ul class="dropdown-content">
-                        <li><a href="#" data-translate="nav.profile">Profil Perusahaan</a></li>
-                        <li><a href="#" data-translate="nav.vision">Visi & Misi</a></li>
-                        <li><a href="#" data-translate="nav.team">Tim Kami</a></li>
-                        <li><a href="#" data-translate="nav.history">Sejarah Perusahaan</a></li>
+                        <li><a href="#" data-translate="nav.about.profile">Profil Perusahaan</a></li>
+                        <li><a href="#" data-translate="nav.about.vision">Visi & Misi</a></li>
+                        <li><a href="#" data-translate="nav.about.team">Tim Kami</a></li>
+                        <li><a href="#" data-translate="nav.about.history">Sejarah Perusahaan</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" data-translate="nav.fields">Bidang</a>
                     <ul class="dropdown-content">
-                        <li><a href="#" data-translate="nav.mining">Industri Pertambangan</a></li>
-                        <li><a href="#" data-translate="nav.chemical">Industri Kimia</a></li>
-                        <li><a href="#" data-translate="nav.energy">Industri Energi</a></li>
-                        <li><a href="#" data-translate="nav.agriculture">Industri Pertanian</a></li>
+                        <li><a href="#" data-translate="nav.fields.mining">Industri Pertambangan</a></li>
+                        <li><a href="#" data-translate="nav.fields.chemical">Industri Kimia</a></li>
+                        <li><a href="#" data-translate="nav.fields.energy">Industri Energi</a></li>
+                        <li><a href="#" data-translate="nav.fields.agriculture">Industri Pertanian</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" data-translate="nav.invest">Investasi</a>
                     <ul class="dropdown-content">
-                        <li><a href="#" data-translate="nav.planning">Perencanaan Investasi</a></li>
-                        <li><a href="#" data-translate="nav.global">Investasi Global</a></li>
-                        <li><a href="#" data-translate="nav.strategy">Strategi Investasi</a></li>
-                        <li><a href="#" data-translate="nav.analysis">Analisis Pasar</a></li>
+                        <li><a href="#" data-translate="nav.invest.planning">Perencanaan Investasi</a></li>
+                        <li><a href="#" data-translate="nav.invest.global">Investasi Global</a></li>
+                        <li><a href="#" data-translate="nav.invest.strategy">Strategi Investasi</a></li>
+                        <li><a href="#" data-translate="nav.invest.analysis">Analisis Pasar</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" data-translate="nav.contact">Hubungi Kami</a>
                     <ul class="dropdown-content">
-                        <li><a href="#" data-translate="nav.address">Jl. Example No.123, Jakarta</a></li>
-                        <li><a href="mailto:info@example.com" data-translate="nav.email">info@example.com</a></li>
-                        <li><a href="tel:+6281234567890" data-translate="nav.phone">+62 812-3456-7890</a></li>
-                        <li><a href="https://wa.me/6281234567890" target="_blank" data-translate="nav.whatsapp">+62 812-3456-7890</a></li>
+                        <li><a href="#" class="contact-address">Jl. Example No.123, Jakarta</a></li>
+                        <li><a href="mailto:info@example.com" class="contact-email">info@example.com</a></li>
+                        <li><a href="tel:+6281234567890" class="contact-phone">+62 812-3456-7890</a></li>
+                        <li><a href="https://wa.me/6281234567890" target="_blank" class="contact-whatsapp">+62 812-3456-7890</a></li>
                     </ul>
                 </li>
             </ul>
